--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Informazioni</title>
     <script type="text/javascript" src="js/script.js"></script>
 </head>
 
 <body>
-
+    <div id="informazioni">
+        <span id="name"></span>
+        <span id="surname"></span>
+        <span id="favoriteColor"></span>
+    </div>
 </body>
 
 </html>
