--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
     <div id="informazioni">
-        <span id="name"></span>
-        <span id="surname"></span>
-        <span id="favoriteColor"></span>
+        <p id="name"></p>
+        <p id="surname"></p>
+        <p id="favoriteColor"></p>
     </div>
 
     <script type="text/javascript" src="js/script.js"></script>
